// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should match error snapshot 1`] = `
<scale-radio-button-group helper-text="Error message" invalid="true" label="Radio Button Label">
  <mock:shadow-root>
    <fieldset class="radio-button-group" part="fieldset">
      <legend class="radio-button-group__title">
        <label aria-label="Radio Button Label" class="radio-button-group__title-label">
          Radio Button Label
        </label>
        <div aria-label="Error message" class="radio-button-group__helper-text radio-button-group__helper-text--status-error" id="helper-message-2" role="text">
          <scale-icon-alert-error size="11"></scale-icon-alert-error>
          <span>
            Error message
          </span>
        </div>
      </legend>
      <div class="radio-button-group__container" part="container">
        <slot></slot>
      </div>
    </fieldset>
  </mock:shadow-root>
  <div slot="radio-button-list">
    <scale-radio-button input-id="choiceOne" invalid="true" label="Radio Button" name="radioError" transparent="true" value="1"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceTwo" invalid="true" label="Radio Button" name="radioError" value="2"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceThree" invalid="true" label="Radio Button" name="radioError" value="3"></scale-radio-button>
  </div>
</scale-radio-button-group>
`;

exports[`RadioButtonGroup should match selected snapshot 1`] = `
<scale-radio-button-group label="Radio Button Label">
  <mock:shadow-root>
    <fieldset class="radio-button-group" part="fieldset">
      <legend class="radio-button-group__title">
        <label aria-label="Radio Button Label" class="radio-button-group__title-label">
          Radio Button Label
        </label>
      </legend>
      <div class="radio-button-group__container" part="container">
        <slot></slot>
      </div>
    </fieldset>
  </mock:shadow-root>
  <div slot="radio-button-list">
    <scale-radio-button checked="" input-id="choiceOne" label="Radio Button" name="radioSelectedOne" transparent="true" value="1"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceTwo" label="Radio Button" name="radioSelectedTwo" value="2"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceThree" label="Radio Button" name="radioSelectedThree" value="3"></scale-radio-button>
  </div>
</scale-radio-button-group>
`;

exports[`RadioButtonGroup should match standard snapshot 1`] = `
<scale-radio-button-group label="Radio Button Label">
  <mock:shadow-root>
    <fieldset class="radio-button-group" part="fieldset">
      <legend class="radio-button-group__title">
        <label aria-label="Radio Button Label" class="radio-button-group__title-label">
          Radio Button Label
        </label>
      </legend>
      <div class="radio-button-group__container" part="container">
        <slot></slot>
      </div>
    </fieldset>
  </mock:shadow-root>
  <div slot="radio-button-list">
    <scale-radio-button input-id="choiceOne" label="Radio Button" name="radioSelect" transparent="true" value="1"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceTwo" label="Radio Button" name="radioSelect" value="2"></scale-radio-button>
    <div style="margin-top: 0.5rem;"></div>
    <scale-radio-button input-id="choiceThree" label="Radio Button" name="radioSelect" value="3"></scale-radio-button>
  </div>
</scale-radio-button-group>
`;
